# example-tasks

./: README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 77f86df5effb_.py
app/api/: dependencies.py
app/application/protocols/: unit_of_work.py
app/core/: base.py
src/: main.py
src/api/: __init__.py  dependencies.py  tasks.py
src/app/: main.py
src/app/api/: dependencies.py  tasks.py
src/app/application/protocols/: repository.py
src/app/application/repositories/: tasks.py
src/app/application/services/: tasks.py
src/app/domain/models/: tasks.py
src/app/domain/schemas/: tasks.py
src/app/infrastructure/: db.py
src/app/infrastructure/migrations/: env.py
src/app/infrastructure/migrations/versions/: 77f86df5effb_.py
src/application/protocols/: repository.py  unit_of_work.py
src/application/repositories/: tasks.py
src/application/services/: tasks.py
src/core/: base.py  settings.py
src/domain/models/: tasks.py
src/infrastructure/: db.py
tests/: conftest.py  test_001_tasks.py
