[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"

[dependencies]
python = "^3.10"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pytest = "^7.4.4"
aiosqlite = "^0.19.0"
uvicorn = "^0.23.0"
